dnl initialization
AC_INIT(tnef, 1.1.2, verdammelt@users.sourceforge.net)
AC_CONFIG_SRCDIR([src/tnef.c])
dnl AM_INIT_AUTOMAKE(tnef,1.1.2)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

dnl check for programs
AC_PROG_AWK
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

dnl check for executable extentions
AC_EXEEXT

dnl check for libraries

dnl check for headers
AC_HEADER_STDC
AC_CHECK_HEADERS(memory.h)
AC_CHECK_HEADERS(string.h)

dnl check for typedefs
AC_TYPE_SIZE_T

dnl check for structures 

dnl check for compiler characteristics.
dnl AC_C_BIGENDIAN
AC_C_CONST
AC_CHECK_SIZEOF(int,0)

dnl check for library functions
AC_REPLACE_FUNCS(strdup getopt_long basename ldiv)
AC_CHECK_HEADERS(libintl.h)
AC_CHECK_FUNCS(strrchr memmove memset)
AC_FUNC_VPRINTF
AC_FUNC_STAT
AC_FUNC_MALLOC

dnl check for system services

dnl extra arguments:
AM_MAINTAINER_MODE
AC_ARG_ENABLE( warnings, 
               [ --enable-warnings	enable compile warnings],
               AC_COMPILE_WARNINGS)
AC_ARG_ENABLE( debug,
               [ --enable-debug  enable debug build],
               AC_DEBUG_COMPILE)

dnl output
AC_CONFIG_FILES([Makefile BUGS tnef.spec doc/Makefile src/Makefile tests/Makefile])
AC_OUTPUT

