SUBDIRS		= lib

# SUBDIRS	=	replace .

# bin_PROGRAMS	=	tnef

# tnef_SOURCES	=	alloc.c attr.c date.c debug.c	\
# 			file.c main.c mapi_attr.c	\
# 			options.c path.c rtf.c		\
# 			tnef.c util.c write.c 		\
# 			xstrdup.c

# noinst_HEADERS	=	alloc.h attr.h common.h 	\
# 			date.h debug.h file.h 		\
# 			mapi_attr.h options.h 		\
# 			path.h rtf.h tnef.h util.h	\
# 			write.h

# BUILT_SOURCES	=	tnef_names.c tnef_names.h	\
# 			tnef_types.c tnef_types.h	\
# 			mapi_types.c mapi_types.h	\
# 			mapi_names.c mapi_names.h

# BUILT_OBJS	=	tnef_names.o tnef_types.o	\
# 			mapi_types.o mapi_names.o

# tnef_LDADD	=	$(BUILT_OBJS) replace/libreplace.a

# EXTRA_DIST	=	mkdata.awk			\
# 			mapi-types.data	mapi-names.data	\
# 			tnef-names.data tnef-types.data

# MOSTLYCLEANFILES=	tnef_names.c tnef_names.h	\
# 			tnef_types.c tnef_types.h	\
# 			mapi_types.c mapi_types.h	\
# 			mapi_names.c mapi_names.h

# $(tnef_OBJECTS): $(BUILT_OBJS)
# tnef_names.c tnef_names.h: tnef-names.data mkdata.awk
# 	$(SHELL) -c 'TAG=tnef_name $(AWK) -f $(srcdir)/mkdata.awk \
# 			$(srcdir)/tnef-names.data'
# tnef_types.c tnef_types.h: tnef-types.data mkdata.awk
# 	$(SHELL) -c 'TAG=tnef_type $(AWK) -f $(srcdir)/mkdata.awk \
# 			$(srcdir)/tnef-types.data'
# mapi_types.c mapi_types.h: mapi-types.data mkdata.awk
# 	$(SHELL) -c 'TAG=mapi_type $(AWK) -f $(srcdir)/mkdata.awk \
# 			$(srcdir)/mapi-types.data'
# mapi_names.c mapi_names.h: mapi-names.data mkdata.awk
# 	$(SHELL) -c 'TAG=mapi_name $(AWK) -f $(srcdir)/mkdata.awk \
# 			$(srcdir)/mapi-names.data'
