EXTRA_DIST	=	help.test help.baseline			\
			version.test version.baseline		\
			basic.test basic.baseline		\
			debug.test debug.baseline		\
			list.test list.baseline			\
			verbose.test verbose.baseline		\
			overwrite.test overwrite.baseline	\
			directory.test directory.baseline	\
			use-path.test use-path.baseline		\
			interactive.test interactive.test	\
			test.tnef AUTHORS.baseline

TESTS		=	help.test version.test basic.test debug.test 	\
			list.test verbose.test overwrite.test 		\
			directory.test use-path.test interactive.test

XFAIL_TESTS	=	use-path.test interactive.test

CLEANFILES	=	*.output *.diff

