EXTRA_DIST	=	help.test help.baseline			\
			version.test version.baseline		\
			basic.test basic.baseline		\
			body.test body.baseline			\
			debug.test debug.baseline		\
			list.test list.baseline			\
			verbose.test verbose.baseline		\
			overwrite.test overwrite.baseline	\
			directory.test directory.baseline	\
			maxsize.test maxsize.baseline		\
			use-path.test use-path.baseline		\
			interactive.test interactive.test	\
			test.tnef AUTHORS.baseline 		\
			message.html.baseline 			\
			body-test.html.baseline			\
			rtf-test.rtf.baseline			\
			triples-test.txt.baseline		\
			triples-test-2.txt.baseline		\
			triples-test-2.rtf.baseline

TESTS		=	help.test version.test basic.test debug.test 	\
			list.test verbose.test overwrite.test 		\
			directory.test maxsize.test			\
			body.test
#			use-path.test interactive.test

XFAIL_TESTS	=	use-path.test interactive.test

CLEANFILES	=	*.output *.diff

