TESTS		=	one-file.test rtf.test two-files.test 		\
			missing-filenames.test long-filename.test 	\
			data-before-name.test MAPI_OBJECT.test 		\
			MAPI_ATTACH_DATA_OBJ.test triples.test 		\
			body.test multi-name-property.test 		\
			garbage-at-end.test multi-value-attribute.test  \
			unicode-mapi-attr.test unicode-mapi-attr-name.test
XFAIL_TESTS	=

CLEANFILES	=	*.output *.diff *.dir

EXTRA_DIST	=	$(TESTS) file-util.sh

SUBDIRS		=	baselines datafiles
