EXTRA_DIST	=	AUTHORS.baseline		\
			AUTOEXEC.BAT.baseline		\
			CONFIG.SYS.baseline		\
			MAPI_ATTACH_DATA_OBJ.baseline	\
			MAPI_OBJECT.baseline		\
			README.baseline			\
			TechlibDEC99-JAN00.doc.baseline	\
			TechlibDEC99.doc.baseline	\
			TechlibNOV99.doc.baseline	\
			Untitled_Attachment.baseline	\
			VIA_Nytt_1402.doc.baseline	\
			VIA_Nytt_1402.pdf.baseline	\
			VIA_Nytt_14021.htm.baseline	\
			boot.ini.baseline		\
			data-before-name.baseline	\
			generpts.src.baseline		\
			long-filename.baseline		\
			missing-filenames.baseline	\
			one-file.baseline		\
			rtf.baseline			\
			two-files.baseline
