EXTRA_DIST	=	AUTHORS.baseline			\
			AUTOEXEC.BAT.baseline			\
			body.baseline				\
			body-body.html.baseline			\
			boot.ini.baseline			\
			CONFIG.SYS.baseline			\
			data-before-name.baseline		\
			data-before-name-body.rtf.baseline	\
			garbage-at-end.baseline			\
			generpts.src.baseline			\
			long-filename.baseline			\
			long-filename-body.rtf.baseline		\
			MAPI_ATTACH_DATA_OBJ.baseline		\
			MAPI_ATTACH_DATA_OBJ-body.rtf.baseline	\
			MAPI_OBJECT.baseline			\
			MAPI_OBJECT-body.rtf.baseline		\
			message.rtf.baseline			\
			missing-filenames.baseline		\
			missing-filenames-body.rtf.baseline	\
			multi-name-property.baseline		\
			one-file.baseline			\
			README.baseline				\
			rtf.baseline				\
			rtf-body.rtf.baseline			\
			TechlibDEC99.doc.baseline		\
			TechlibDEC99-JAN00.doc.baseline		\
			TechlibNOV99.doc.baseline		\
			triples.baseline			\
			triples-body.rtf.baseline		\
			two-files.baseline			\
			Untitled_Attachment.baseline		\
			VIA_Nytt_14021.htm.baseline		\
			VIA_Nytt_1402.doc.baseline		\
			VIA_Nytt_1402.pdf.baseline
