EXTRA_DIST	=	MAPI_ATTACH_DATA_OBJ.list	\
			MAPI_ATTACH_DATA_OBJ.tnef	\
			MAPI_OBJECT.list		\
			MAPI_OBJECT.tnef		\
			data-before-name.list		\
			data-before-name.tnef		\
			long-filename.list		\
			long-filename.tnef		\
			missing-filenames.list		\
			missing-filenames.tnef		\
			one-file.list			\
			one-file.tnef			\
			rtf.list			\
			rtf.tnef			\
			triples.list			\
			triples.tnef			\
			two-files.list			\
			two-files.tnef


